src/better_profile.css
/* Better user profile popups */
/* By Sera M (Discord 155159390637260800) */
/* Look, if you see any problems in here... I don't know what I'm doing either */

/* Improved user name + banner */
/* Banner + avatar */
#app-mount .userPopout-2j1gM4 .banner-1YaD3N { height: 124px; }
#app-mount .userPopout-2j1gM4 .banner-1YaD3N div { display: none; }
#app-mount .userPopout-2j1gM4 [class*="avatarPosition"] { top: 16px; }
#app-mount .userPopout-2j1gM4 .avatar-2Vndt_ {
  filter: drop-shadow(0px 0px 5px black);
  border: 6px solid transparent;
  background-color: rgb(0,0,0,0.25);
}

/* Name display */
#app-mount .userPopout-2j1gM4 .headerTop-3GPUSF {
  padding: 8px 16px;
  background-image: linear-gradient(to left, var(--background-floating), rgb(0,0,0,0.5));
  border-top-right-radius: inherit;
  position: absolute;
  display: flex;
  flex-direction: column-reverse;
  right: 0;
  width: 144px;
  height: 108px;
}

/* Badges */
#app-mount .userPopout-2j1gM4 .headerTop-3GPUSF .headerText-1-WmDq { margin: auto 0; }
#app-mount .userPopout-2j1gM4 .headerTop-3GPUSF .profileBadges-2pItdR {
  justify-content: flex-start;
  position: initial;
}

/* General profile padding changes */
/* Body padding changes */
#app-mount .userPopout-2j1gM4 { padding-bottom: 16px; }
#app-mount .userPopout-2j1gM4 .body-2wLx-E { padding: 8px 16px 0px; }
#app-mount .userPopout-2j1gM4 .body-2wLx-E > div { margin-bottom: 8px; }

/* Profile info (Rolenames, activity, notes etc) */
/* Stylized subtitles, divider style */
#app-mount .userPopout-2j1gM4 .body-2wLx-E 
:is(h3, .activity-1gTu-L .headerContainer-1wJjOa) {
  height: 1px;
  background-color: var(--background-modifier-accent);
  margin-bottom: 8px;
  font-size: 0px;
}
#app-mount .userPopout-2j1gM4 .divider-1wtgZ3 { display: none; }
/* Server-side bio fix */
#app-mount .userPopout-2j1gM4 
.aboutMeSection-PUghFQ .icon-1zKOXL {
  margin-left: 0px;
  top: -8px;
  border: solid var(--background-modifier-accent);
}

/* Roles */
#app-mount .userPopout-2j1gM4 .body-2wLx-E .rolesList-3uZoaa { margin: 0 0 4px; }
#app-mount .userPopout-2j1gM4 .body-2wLx-E 
div[aria-label="No Roles"] + .bodyTitle-2Az3VQ { display: none; }

/* Activity, Spotify */
/* TODO: Not 100% perfect, needs improvement */
#app-mount .userPopout-2j1gM4 .activity-1gTu-L { padding: 0; }
#app-mount .userPopout-2j1gM4 .activity-1gTu-L 
:is(.headerContainer-1wJjOa, .bodyNormal-250CQK) h3 { display: none; }
#app-mount .userPopout-2j1gM4 .activity-1gTu-L .headerContainer-1wJjOa ~ div {
  padding-bottom: 8px;
  margin: 0;
}
#app-mount .userPopout-2j1gM4 .activity-1gTu-L 
  .platformIcon-k3yytQ { display: none; }

/* User notes */
#app-mount .userPopout-2j1gM4 .note-Go5ZP2 { margin: 0; }

/* User DM */
#app-mount .userPopout-2j1gM4 .footer-3naVBw { padding: 8px 16px 0; }

/* PronounDB support - move pronouns up */
#app-mount .userPopout-2j1gM4 .bodyInnerWrapper-2bQs1k {
  margin-bottom: 0 !important;
  display: flex;
  flex-direction: column;
}
#app-mount .userPopout-2j1gM4 .note-Go5ZP2 + .bodyTitle-2Az3VQ { display: none; }
#app-mount .userPopout-2j1gM4 .bodyTitle-2Az3VQ + .size14-3fJ-ot {
  order: -1;
  margin-bottom: 8px;
  color: var(--text-normal);
}

